--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Recursive Pursuer
+email: weltering@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Recursive Pursuer - Learning to know well whatever I know...
 baseurl: "" # the subpath of your site, e.g. /blog
