--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ email: weltering@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Recursive Pursuer - Learning to know well whatever I know...
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://weltering.github.io" # the base hostname & protocol for your site
-twitter_username: @welterInger
+url: "http://yourlocaldomain.com" # the base hostname & protocol for your site
+twitter_username: welterInger
 github_username:  weltering
 
 # Build settings
