--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Recursive Pursuer - Learning to know well whatever I know...
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourlocaldomain.com" # the base hostname & protocol for your site
-twitter_username: welterInger
-github_username:  weltering
+twitter_username: "@welterInger"
+github_username:  "weltering"
 
 # Build settings
 markdown: kramdown
