--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Recursive Pursuer - Learning to know well whatever I know...
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourlocaldomain.com" # the base hostname & protocol for your site
-twitter_username: "@weltergeist"
+twitter_username: "@Weltergeist"
 github_username:  "weltering"
 
 # Build settings
