--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: Recursive Pursuer
 email: weltering@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Recursive Pursuer - Learning to know well whatever I know...
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourlocaldomain.com" # the base hostname & protocol for your site
+baseurl: "/index.html" # the subpath of your site, e.g. /blog
+url: "https://weltering.github.io" # the base hostname & protocol for your site
 twitter_username: "@Weltergeist"
 github_username:  "weltering"
 
